k3d/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-sample-svc
  namespace: touches-online-qa
spec:
  selector:
    app: fastapi-sample-dep
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3050
