k3d/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-sample-ingress
  namespace: touches-online-qa
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefix
spec:
  rules:
    - host: fastapi-sample.touches.online
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fastapi-sample-svc
              port:
                name: http
